<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#4CAF50"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="@string/qu_n_l_nh_n_vi_n"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/m_nv"/>

        <EditText
            android:id="@+id/edtMaNV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"
            android:hint="@string/nh_p_m_nv"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/t_n_nv"/>

        <EditText
            android:id="@+id/edtTenNV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textPersonName"
            android:hint="@string/nh_p_t_n_nv"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/gi_i_t_nh"/>

        <RadioGroup
            android:id="@+id/rgGioiTinh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nam"/>

            <RadioButton
                android:id="@+id/rbNu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btnNhap"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:text="@string/nh_p_nv"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#4CAF50"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/danh_s_ch_nh_n_vi_n"/>

        <Button
            android:id="@+id/btnXoaNV"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:text="@string/x" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvNhanVien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"/>

</LinearLayout>
